--- a/index.html
+++ b/index.html
@@ -8,22 +8,23 @@
 </head>
 <body>	
 	<section class="section">
+		
 		<h1>Loading lazy images</h1>
 
 		<div class="containerText">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam ipsum repellendus repudiandae, reprehenderit necessitatibus maxime cum explicabo voluptatibus! Neque facere voluptates quae excepturi mollitia nam officiis id, earum maiores nihil nemo numquam quam? Quos magni, repudiandae, eos suscipit odit qui temporibus sint quidem commodi, est quibusdam officiis tempore velit. Assumenda totam quaerat at provident esse sint delectus, accusamus autem nostrum velit earum pariatur sapiente optio placeat maxime sequi maiores officiis. Minus dolore quia, fugiat autem doloribus dolorum modi, illum, veniam sunt eaque sint iste nemo quasi itaque cupiditate ducimus voluptatem, provident voluptatibus debitis. Ex, reprehenderit pariatur nesciunt temporibus aliquam, aspernatur!</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam ipsum repellendus repudiandae, reprehenderit n Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae totam quaerat porro nesciunt, inventore veniam iste dicta sapiente sequi eligendi, ad dolorem officiis nisi. Rem nesciunt obcaecati vitae itaque ut! Sed expedita laudantium, eius quidem ex eum amet perferendis ad quaerat quam optio dolorum placeat, nobis suscipit delectus quis. Excepturi alias ducimus qui distinctio facere, temporibus! Et suscipit, odit. Corrupti praesentium officiis, mollitia, ad saepe, modi voluptatibus eaque aut, iure doloribus commodi omnis aspernatur perferendis! Incidunt omnis eum unde. Ratione quaerat qui perferendis commodi error beatae ab, id molestias, soluta vitae illum ducimus optio voluptatibus a vel molestiae nam, consequuntur. ecessitatibus maxime cum explicabo voluptatibus! Neque facere voluptates quae excepturi mollitia nam officiis id, earum maiores nihil nemo numquam quam? Quos magni, repudiandae, eos suscipit odit qui temporibus sint quidem commodi, est quibusdam officiis tempore velit. Assumenda totam quaerat at provident esse sint delectus, accusamus autem nostrum velit earum pariatur sapiente optio placeat maxime sequi maiores officiis. Minus dolore quia, fugiat autem doloribus dolorum modi, illum, veniam sunt eaque sint iste nemo quasi itaque cupiditate ducimus voluptatem, provident voluptatibus debitis. Ex, reprehenderit pariatur nesciunt temporibus aliquam, aspernatur!</p>
 		</div>
 
 		<div class="containerImg">
-			<img src="img/img_01.jpg">
+			<img class="lazy" data-original="img/img_01-compressed.jpg">
 		</div>
 
 		<div class="containerText">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam ipsum repellendus repudiandae, reprehenderit necessitatibus maxime cum explicabo voluptatibus! Neque facere voluptates quae excepturi mollitia nam officiis id, earum maiores nihil nemo numquam quam? Quos magni, repudiandae, eos suscipit odit qui temporibus sint quidem commodi, est quibusdam officiis tempore velit. Assumenda totam quaerat at provident esse sint delectus, accusamus autem nostrum velit earum pariatur sapiente optio placeat maxime sequi maiores officiis. Minus dolore quia, fugiat autem doloribus dolorum modi, illum, veniam sunt eaque sint iste nemo quasi itaque cupiditate ducimus voluptatem, provident voluptatibus debitis. Ex, reprehenderit pariatur nesciunt temporibus aliquam, aspernatur!</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam ipsum repellendus repudiandae, reprehenderit necessitatibus maxime cum explicabo voluptatibus! Neque facere voluptates quae excepturi mollitia nam officiis id, earum maiores nihil nemo numquam quam? Quos magni, repudiandae, eos suscipit odit qui temporibus sint quidem commodi, est quibusdam officiis tempore velit. Assumenda totam quaerat at provident esse Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis assumenda molestiae expedita quisquam, eligendi. Dicta placeat fuga maxime. Numquam debitis error blanditiis consequatur ex, quos sed quas dolore voluptate necessitatibus beatae omnis sapiente ipsa dolorem nesciunt aspernatur aut, repellendus, cumque dolorum ipsam illum! Aut perspiciatis veniam quo. Iste nobis, neque placeat voluptatem, facilis explicabo iure quos, laudantium cumque obcaecati dignissimos. Dolores necessitatibus suscipit, odit delectus dolore dignissimos deserunt eius magnam quia soluta modi cum eligendi minus veritatis molestiae, nobis sapiente ipsam! Dolor, dignissimos, perferendis distinctio laudantium aliquid delectus! Blanditiis sit, exercitationem iusto excepturi odit culpa consectetur iste quod eos perferendis. sint delectus, accusamus autem nostrum velit earum pariatur sapiente optio placeat maxime sequi maiores officiis. Minus dolore quia, fugiat autem doloribus dolorum modi, illum, veniam sunt eaque sint iste nemo quasi itaque cupiditate ducimus voluptatem, provident voluptatibus debitis. Ex, reprehenderit pariatur nesciunt temporibus aliquam, aspernatur!</p>
 		</div>
 
 		<div class="containerImg">
-			<img src="img/img_02.jpg">
+			<img class="lazy" data-original="img/img_02-compressed.jpg">
 		</div>
 
 		<div class="containerText">
@@ -31,7 +32,7 @@
 		</div>
 		
 		<div class="containerImg">
-			<img src="img/img_03.jpg">
+			<img class="lazy" data-original="img/img_03-compressed.jpg">
 		</div>
 
 		<div class="containerText">
@@ -39,7 +40,7 @@
 		</div>
 
 		<div class="containerImg">
-			<img src="img/img_04.jpg">
+			<img class="lazy" data-original="img/img_04-compressed.jpg">
 		</div>
 
 		<div class="containerText">
@@ -47,9 +48,10 @@
 		</div>
 
 		<div class="containerImg">
-			<img src="img/img_05.jpg">
+			<img class="lazy" data-original="img/img_05-compressed.jpg">
 		</div>
 	</section>
+	
 	<script src="lib/jquery.min.js"></script>
 	<script src="lib/jquery.lazyload.js"></script>
 	<script src="script/script.js"></script>
